Show/cancel/clear

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,9 +13,13 @@
   }
 
   .search-cancel-button{
+    cursor: pointer;
     display: block;
     height: 12px;
     outline: 1px solid red;
     position: absolute;
     width: 12px;
+  }
+  .search-cancel-button.hidden{
+    visibility: hidden;
   }
