--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-.search-cancel input[type="search"],
+.input-search,
 .searchfield-as-textfield{
   -webkit-appearance: textfield;
   -moz-appearance: textfield;
@@ -9,7 +9,7 @@
   padding-right: 14px;
 }
 
-  .search-cancel input[type="search"]::-webkit-search-cancel-button,
+  .input-search::-webkit-search-cancel-button,
   .searchfield-as-textfield::-webkit-search-cancel-button{
     -webkit-appearance: none;
   }
