--- a/src/css/examples.css
+++ b/src/css/examples.css
@@ -8,3 +8,10 @@ form :nth-of-type(2) input,
 form input:nth-of-type(2){
   padding: 10px 20px 40px;
 }
+
+.fancy{
+  border: 10px dashed deeppink;
+  font-size: 2em;
+  margin: 10px;
+  padding: 20px;
+}
